# ente-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ENTE_SYNC.md  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
docs/: LICENSE_HEADER.txt
src/ente_tools/: cli.py  filestat.py  local_media_manager.py  sync_cli.py  synchronizer.py
src/ente_tools/api/core/: __init__.py  account.py  api.py  device.py  ente_crypt.py  types_collection.py  types_crypt.py  types_file.py
src/ente_tools/api/local_media/: __init__.py  file_metadata.py  loader.py  sync.py
src/ente_tools/api/photo/: __init__.py  file_metadata.py  loader.py  local_file.py  photo_file.py  sync.py
src/ente_tools/db/: __init__.py  base.py  in_memory.py  models.py  sqlite.py
src/ente_tools/sync/: __init__.py  ente_library.py  immich_library.py  ingestor.py  library.py  local_library.py  photo.py  sync.py
tests/: TODO.txt  __init__.py  test_backend.py  test_download.py  test_login.py
tests/ente_test_server/: README.md  __init__.py  checkpoint.sh  compose.yaml  down.sh  ente_server.py  ente_tool.sh  mc.sh  otp.sh  pg_dump.sh  psql.sh  up.sh
tests/ente_test_server/files/: credentials.yaml  minio-checkpoint.sh  minio-provision.sh  minio-startup.sh
tests/ente_test_server/init/base/: init.sql
tests/ente_test_server/state/base/: db.sql
tests/ente_test_server/state/base/b2-eu-cen/: README.md
tests/ente_test_server/state/some_files/: db.sql
tests/ente_test_server/state/some_files/b2-eu-cen/1580559962386438/: adca0074-0e1f-4e27-877c-1b460c9bbc0f  ce17ea8f-60cb-4549-a308-edbe2097f2db
